add source maps

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -135,9 +135,16 @@ custom configurations in order to perform optimally in this theme:
 | brotli | Compression | perf | Lume Official | Yes | No |
 | minify-html | HTML Minification | perf | Lume Official | Yes | No |
 | pagefind | Provides Search | search | Lume Official | Yes | No |
+| source maps | Source Maps (Dev Plugin) | devEx | Lume Official | Yes | No |
 
-This may change slightly before the first release, but to include more,
-_most likely_ not to remove any.
+
+***This list is unlikely to change.*** While more could conceivably
+go in, this is already quite a few plugins, and people will of course
+add more and further customize things.
+
+If you really think I missed an important one, open an issue on Github
+and let me know which one. Note that I left Source Maps out as I consider 
+that a dev one to use locally. 
 
 <h2 id="contributing">Contributing</h2>
 
