ended up including source maps after all

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -143,8 +143,7 @@ go in, this is already quite a few plugins, and people will of course
 add more and further customize things.
 
 If you really think I missed an important one, open an issue on Github
-and let me know which one. Note that I left Source Maps out as I consider 
-that a dev one to use locally. 
+and let me know which one.
 
 <h2 id="contributing">Contributing</h2>
 
