images / frontmatter updates

--- a/src/features/accessibility.mdx
+++ b/src/features/accessibility.mdx
@@ -1,6 +1,12 @@
 ---
 title: Accessibility And Responsiveness
+description: Cushy Text Goals For Responsiveness And Accessibility, Along With Where Things Are.
 layout: layouts/page.vto
+metas:
+  image: /features/accessibility/index.png
+menu:
+  visible: true
+  order: 0
 ---
 
 # {title}
