--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -1,4 +1,10 @@
 ---
 title: Cushy Text Features
 layout: layouts/page.vto
+description: Features Of Cushy Text - An Infima-Powered, Interactive, Responsive & Accessible Theme For Lume 3+
+menu:
+  visible: true
+  order: 0
+metas:
+  image: /features/index.png
 ---
