--- a/src/features/localization.mdx
+++ b/src/features/localization.mdx
@@ -1,6 +1,12 @@
 ---
 title: Internationalization & Locales
+description: Cushy Text Is Translation-Ready, But Has No Default Language Plugin
 layout: layouts/page.vto
+menu:
+  visible: true
+  order: 0
+metas:
+  image: /features/localization/index.png
 ---
 
 # Ready For Translation!
