Be a little more specific in main index description

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -1,11 +1,11 @@
 ---
 title: Overview, Status & Getting Started
-description: "Status & Quickstart: Cushy Text"
+description: "Cushy Text Is Under Heavy Development: Beware Of Breaking Changes!"
 menu:
   visible: true
   order: 0
 metas:
-  description: A primer on how to get started with the CushyText Lume Theme, Under Development.
+  description: A primer on how to get started with the CushyText Lume Theme, Currently Under Heavy Development.
   image: /docs/index.png
 ---
 
