--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -50,6 +50,9 @@ things like testing redirects.
 
  - Search! (See whole section below this one)
 
+ - Re-doing the docs auto nav with the [Nav plugin](https://lume.land/plugins/nav/), which
+   I think also helps solve the custom sidebar import blocker too.
+
  - See section about plugins below.
 
  - Everything needed to be a remote theme (`mod.ts` for remote files, 
