Many page updates

--- a/src/docs/components.mdx
+++ b/src/docs/components.mdx
@@ -98,4 +98,4 @@ result of being able to produce real results with very little markup or
 deep programming or design knowledge. 
  
   [1]: https://lume.land/docs/core/components/
-  [2]: /features/components/
+  [2]: /features/#components
