More cleanup of docs. Move giant table to features page

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -79,84 +79,10 @@ things like testing redirects.
  - Finish porting all the components to Lume 3 structure.
 
  - Have author bios and tag info content for tag and author pages so they're
-   indexed better.
+   indexed better (already started)
 
  - SEO Plugin v1 should be ready by then.
 
-## Status Of Search:
-
-Pagefind (even if you tweak every CSS element it uses) just does _not_ integrate
-well into the Infima nav bar without breaking either Pagefind or Infima. To get 
-around this, I put the Pagefind search div in a modal that opens when the navigation 
-bar search gets focus. Similar to how Algolia works.
-
-This works well enough to ship, however: and this is a ***big*** however:
-
-I don't want to leave it at "just pagefind" even though that alone is already
-quite good. People often want to be able to bring in more sources, or create 
-feeds from searches - these are things we could do if searches went through
-the Router middleware. Middleware can talk to the Pagefind JS API directly, 
-`fetch()` anything else that might be relevant from, say, your main site,
-do any additional merging and return a nice result array, with a UI that 
-allows for more filtering options.
-
-In order to ship, and for probably the first couple of versions, it'll just
-be Pagefind in a modal. But I don't want to lose traction on the idea of 
-implementing search in a more integrator-friendly way.
-
-
-<h2 id="plugin-status">Status Of Included Plugins:</h2>
-
-As of now, all plugins are installed, configured and working properly. The
-table below shows the status of what's included, as well as which ones have
-custom configurations in order to perform optimally in this theme:
-
-| Plugin | Description | Type | Author | Installed? | Custom Configured? |
-|:-:|:-:|:-:|:-:|:-:|:-:|
-| expires | Server Middleware | base | Lume Official | Yes | No |
-| router | Server Middleware | base | Lume Official | Yes | Yes |
-| cache buster | Server Middleware | base | Lume Official | Yes | No |
-| conductor  | Required Theme Plugin | base | Tim Post | Yes | Yes |
-| og-images | Generate OG Images From Templates | base | Lume Official | Yes | Yes |
-| picture | Create Responsive Images Automatically | base | Lume Official | Yes | No |
-| basepath   | Core Lume Plugin       | base | Lume Official | Yes | No |
-| nav        | Nav helper for Lume    | base | Lume Official | Yes | No |
-| transform-images | Transform Images | base | Lume Official | Yes | No |
-| icons | Easily Use Open Source Icon Sets | base | Lume Official | Yes | No |
-| mdx        | Default Document, Built On SSX | base | Lume Official | Yes | No |
-| postcss    | CSS Processor          | css | Lume Official | Yes | No |
-| purgecss   | CSS Cleaner            | css | Lume Official | Yes | No |
-| feed       | Generate Feeds         | seo | Lume Official | Yes | Yes |
-| sitemap    | Generate Sitemap       | seo | Lume Official | Yes | No |
-| robots     | Generate robots.txt    | seo | Lume Official | Yes | No |
-| check_urls | Check link validity    | seo | Lume Official | Yes | Yes |
-| slugify_urls | Slugify URLs         | seo | Lume Official | Yes | Yes |
-| redirects  | Manage Redirects       | seo | Lume Official | Yes | No |
-| seo        | Static SEO Analysis    | seo | Tim Post | Yes | No |
-| metas      | Meta Tag Generation    | seo | Lume Official | Yes | No |
-| readinginfo | Display Reading Time  | user | Lume Official | Yes | No |
-| prism | Fancy Code Highlighting | user | Lume Official | Yes | Yes |
-| terser | JavaScript Minifier | perf | Lume Official | Yes | Yes |
-| brotli | Compression | perf | Lume Official | Yes | No |
-| minify-html | HTML Minification | perf | Lume Official | Yes | No |
-| pagefind | Provides Search | search | Lume Official | Yes | Yes |
-| source maps | Source Maps (Dev Plugin) | devEx | Lume Official | Yes | No |
-
-
-***This list is unlikely to change.***
-
-Order of plugin loading matters considerably more in Lume 3, which is 
-what Cushy Text is being built on. Right now, the project is working
-on making sure all _currently_ installed plugins are configured to 
-work optimally together. Adding another  plugin that affects output
-in any way would just complicate the last stages of development for 
-the first release.
-
-If you _really_ think I missed one that should _absolutely_ be part
-of the very first release, please find me on the Cushy Text Discord
-(link in footer) and let me know, or open a GH issue.
-
-Speaking of issues ...
 
 <h2 id="contributing">Contributing</h2>
 
