--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -90,5 +90,36 @@ fine, both ways work.
 <h2 id="plugins">Includes A Ton Of Pre-Configured Plugins!</h2>
 
 Everything from automatic OG image generation to broken link detection and plenty of 
-optimization. Have a look at the [docs](/docs/#plugin-status) to see more about
-what's shipping under the hood.
+optimization. Have a look at what's under the hood:
+
+| Plugin | Description | Type | Author | Installed? | Custom Configured? |
+|:-:|:-:|:-:|:-:|:-:|:-:|
+| expires | Server Middleware | base | Lume Official | Yes | No |
+| router | Server Middleware | base | Lume Official | Yes | Yes |
+| cache buster | Server Middleware | base | Lume Official | Yes | No |
+| conductor  | Required Theme Plugin | base | Tim Post | Yes | Yes |
+| og-images | Generate OG Images From Templates | base | Lume Official | Yes | Yes |
+| picture | Create Responsive Images Automatically | base | Lume Official | Yes | No |
+| basepath   | Core Lume Plugin       | base | Lume Official | Yes | No |
+| nav        | Nav helper for Lume    | base | Lume Official | Yes | No |
+| transform-images | Transform Images | base | Lume Official | Yes | No |
+| icons | Easily Use Open Source Icon Sets | base | Lume Official | Yes | No |
+| mdx        | Default Document, Built On SSX | base | Lume Official | Yes | No |
+| postcss    | CSS Processor          | css | Lume Official | Yes | No |
+| purgecss   | CSS Cleaner            | css | Lume Official | Yes | No |
+| feed       | Generate Feeds         | seo | Lume Official | Yes | Yes |
+| sitemap    | Generate Sitemap       | seo | Lume Official | Yes | No |
+| robots     | Generate robots.txt    | seo | Lume Official | Yes | No |
+| check_urls | Check link validity    | seo | Lume Official | Yes | Yes |
+| slugify_urls | Slugify URLs         | seo | Lume Official | Yes | Yes |
+| redirects  | Manage Redirects       | seo | Lume Official | Yes | No |
+| seo        | Static SEO Analysis    | seo | Tim Post | Yes | No |
+| metas      | Meta Tag Generation    | seo | Lume Official | Yes | No |
+| readinginfo | Display Reading Time  | user | Lume Official | Yes | No |
+| prism | Fancy Code Highlighting | user | Lume Official | Yes | Yes |
+| terser | JavaScript Minifier | perf | Lume Official | Yes | Yes |
+| brotli | Compression | perf | Lume Official | Yes | No |
+| minify-html | HTML Minification | perf | Lume Official | Yes | No |
+| pagefind | Provides Search | search | Lume Official | Yes | Yes |
+| source maps | Source Maps (Dev Plugin) | devEx | Lume Official | Yes | No |
+
