--- a/src/docs/components.mdx
+++ b/src/docs/components.mdx
@@ -19,41 +19,9 @@ An example of a component used in the site right now is the one
 that fetches the latest blog post on this site's index page, 
 which comes from `src/_components/latestBlog.vto`:
 
-```html
+```js
 {{ for post of search.pages("waypoint=%blog% menu.visible=true", "date=desc", (max_posts || 1)) }}
-    <div class="card padding--md">
-        <h2 class="margin-horiz--md">{{ locale.comp.latestBlog.heading }}</h2>
-        <div class="card__header">
-            <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-            <p class="margin-vert--md">
-                <em>
-                    {{ locale.posts.written_by }} <a href="/author/{{ post.author |> slugify }}">
-                    {{> const relativeDate = new Date(post.date) }}
-                    <strong>{{ post.author }}</strong></a> on 
-                    {{ relativeDate.toISOString().slice(0, 10) }}
-                </em>
-                {{ if post.tags }}
-                    <em>&nbsp;|&nbsp;{{ locale.posts.has_tags }}</em>
-                    {{ for tag of post.tags }}
-                        <a href="/archive/{{ tag |> slugify }}/" class="post-tag">
-                        {{ tag }}
-                        </a>
-                    {{ /for }}
-                {{ /if }}
-            </p>
-            {{> const teaser = post.excerpt.replace(/<img[^>]*>/g, '') }}
-            <div class="markdown toc-enabled font-selectable">
-            {{ teaser |> md }}
-            </div>   
-        </div>
-        <div class="card__footer">
-            <a href="{{ post.url }}" class="navbar__link">
-                <button class="button button--primary button--block">
-                Continue Reading ({{ post.readingInfo.minutes }} {{ locale.posts.read_time }}) &raquo;
-                </button>
-            </a>
-        </div>
-    </div>     
+    .... show the content of max_posts posts ....
 {{ /for }}
 ```
 
